--- a/style/index.css
+++ b/style/index.css
@@ -1,17 +1,27 @@
-* {
-    background-color: lightgray;
+/* {
+    background-color: rgb(128, 163, 201);
     padding: 0;
     margin: 0;
+}*/
+body{
+  font-family: 'Baloo Da 2', Arial;
+  margin: 2;
+  padding: 2;
+  background-color: rgb(240,249,245);
+  grid-template: 20px 400px 420px/ 1fr 1fr 1fr;
 }
 .container{
   display: grid;
-  grid-template: 40px 360px 350px/ 1fr 1fr 1fr;
-  margin:0 auto;
+  grid-template: 120px 380px 370px/ 1fr 1fr 1fr;
+  margin: 5px; ;
+  padding: 5px;
   grid-template-areas: "header header header"
                        "img-container1 img-container2 img-container3"
                        "img-container4 img-container5 img-container6";
 }
-
+img{
+  background-color: white;
+}
 .header{
   width: 1300px;
   font-family: Arial, Helvetica, sans-serif;
@@ -80,4 +90,38 @@ output li{
 #color{
   padding: 2px 20px;
   background-color: black;
+}
+footer{
+  padding: 30px;
+  background-color: white;
+  color: black; 
+    font-size:30px;
+    font-family: cursive;
+    font-style: oblique;
+}
+footer .container{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer{
+  grid-area:footer;
+  padding-right: 40px;
+  background-color: #2d3436;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer-div{
+  display: inherit;
+  align-items: center
+}
+
+.footer img{
+  height: 100px;
+  border-radius: 50%;
 }
